[tool.poetry]
name = "langchain"
version = "0.0.26"
description = "Building applications with LLMs through composability"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/hwchase17/langchain"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.44"
numpy = "^1.23.5"
requests = "^2.28.1"
PyYAML = "^6.0"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
flake8-docstrings = "^1.6.0"
types-requests = "^2.28.11.5"
types-PyYAML = "^6.0.12.2"

[tool.poetry.extras]
cohere = ["llms", "all"]
openai = ["llms", "all"]
nlpcloud = ["llms", "all"]
huggingface_hub = ["llms", "all"]
elasticsearch = ["all"]
google-search-results = ["all"]
faiss-cpu = ["all"]
sentence_transformers = ["all"]
transformers = ["all"]
spacy = ["all"]
nltk = ["all"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
